<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3hello1"
        android:gravity="center"
        android:textColor="#DC0909"
        android:textSize="20sp"
        android:layout_marginTop="50dp"

        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3hello2"
        android:gravity="center"
        android:textColor="#DC0909"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/text1"/>
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3hello3"
        android:gravity="center"
        android:textColor="#DC0909"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/text2"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginTop="50dp"
        android:text="@string/back" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button1"
        android:layout_marginTop="50dp"
        android:layout_marginStart="250dp"
        android:layout_below="@+id/text3"
        android:layout_alignParentEnd="true"
        android:text="@string/next" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3hello4"
        android:gravity="center"
        android:textColor="#DC0909"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button1"/>

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page3hello5"
        android:gravity="center"
        android:textColor="#DC0909"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/text4"/>

</RelativeLayout>